fix: dashboard overflow pc/mobile

--- a/app/account/AccountLayout.module.sass
+++ b/app/account/AccountLayout.module.sass
@@ -18,13 +18,13 @@ section.account
         background: var(--background)
         color: var(--on-background)
         width: 100%
-        min-height: 100vh
+        height: 100vh
+        overflow-y: auto
         border-top-left-radius: 25px
         border-bottom-left-radius: 25px
         padding: 20px
         box-sizing: border-box
         @media screen and (max-width: 600px)
-            margin-bottom: 25px
             border-top-left-radius: 0
             border-bottom-left-radius: 0
         & aside.topbar
